// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component renders BOLD variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-p2dihp-MuiTypography-root"
  >
    BOLD Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders ERROR variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-yypkrf-MuiTypography-root"
  >
    ERROR Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders H1 variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-u9cgmb-MuiTypography-root"
  >
    H1 Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders H2 variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-xgonna-MuiTypography-root"
  >
    H2 Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders H3 variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-3k5gu6-MuiTypography-root"
  >
    H3 Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders H4 variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-sl9dv0-MuiTypography-root"
  >
    H4 Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders H5 variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-108gikc-MuiTypography-root"
  >
    H5 Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders REGULAR variant correctly 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-55cgef-MuiTypography-root"
  >
    REGULAR Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders correctly with no children 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-u9cgmb-MuiTypography-root"
  />
</DocumentFragment>
`;

exports[`Text Component renders correctly with numerical children 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-u9cgmb-MuiTypography-root"
  >
    12345
  </p>
</DocumentFragment>
`;

exports[`Text Component renders regular text by default 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-u9cgmb-MuiTypography-root"
  >
    Default Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders small text when small prop is true 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-118wq2h-MuiTypography-root"
  >
    Small Bold Text
  </p>
</DocumentFragment>
`;

exports[`Text Component renders with custom color 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-93oes6-MuiTypography-root"
  >
    Colored Header
  </p>
</DocumentFragment>
`;
